# SNISPF

./: .gitignore  Dockerfile  LICENSE  README.md  config.json  pyproject.toml  run.py
sni_spoofing/: __init__.py  cli.py  forwarder.py
sni_spoofing/bypass/: __init__.py  combined.py  fake_sni.py  raw_injector.py
sni_spoofing/tls/: __init__.py  fragment.py
sni_spoofing/utils/: __init__.py
tests/: test_tls.py
