[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sni-spoofing-cli"
version = "1.0.0"
description = "Cross-platform DPI bypass tool via SNI spoofing - CLI version of @patterniha's original tool"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "patterniha", email = "patterniha@users.noreply.github.com"},
]
keywords = ["sni", "spoofing", "dpi", "bypass", "censorship", "tls", "fragment", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/patterniha/sni-spoofing-cli"
Repository = "https://github.com/patterniha/sni-spoofing-cli"
Issues = "https://github.com/patterniha/sni-spoofing-cli/issues"

[project.scripts]
sni-spoofing = "sni_spoofing.cli:main"

[tool.setuptools.packages.find]
include = ["sni_spoofing*"]
